# support_api

./: .gitignore  README.md  pyproject.toml
apps/items/: models.py  serializers.py  tests.py  urls.py  views.py
apps/items/migrations/: 0001_initial.py
docs/: REPORT.md
support_api/: settings.py  urls.py
